$NetBSD: CHANGES,v 1.969 2003/01/02 03:22:07 rh Exp $

Changes to the packages collection and infrastructure in 2003:

	Added iasp-2.1.1 [jlam 2003-01-01]
	Added ap-iasp-2.1.1 [jlam 2003-01-01]
	Updated bison to 1.875 [cjep 2003-01-01]
	Updated ups-nut to 1.2.1nb1 [lukem 2003-01-01]
	Updated tuxpaint to 2002.10.26nb2 [jmmv 2003-01-01]
	Updated sysbuild to 1.8 [jmmv 2003-01-01]
	Updated tcm to 2.01nb1 [jmmv 2003-01-01]
	Updated gnome-vfs to 1.0.3nb1 [rh 2003-01-02]
	Updated gnome-mime-data to 2.0.1nb2 [rh 2003-01-02]